# manisa-engeregi

./: .gitignore  CMakeLists.txt  Makefile  TODO  bnf.txt  deneme.me  deneme.txt
examples/: analyserhatalı.me  faktöriyel.me  girdi.me  lexerhatalı.me  oku.me  parserhatalı.me  runtimehatalı.me
src/: helpers.c  helpers.h  lut.c  lut.h  main.c
src/diag/: diag.c  diag.h
src/parser/: analyse.c  analyse.h  analyser.c  analyser.h  lexer.c  lexer.h  node.c  node.h  parser.c  parser.h  stmt.c  stmt.h  token.c  token.h
src/utils/: darray.h  hashmap.c  hashmap.h  str.h  utf8.c  utf8.h
src/vm/: bytecode.c  bytecode.h  co.c  co.h  object.c  object.h  vm.c  vm.h
src/vm/builtins/: builtin.c  builtin.h  cast.c  cast.h  io.c  io.h
src/vm/objects/: boolobject.c  boolobject.h  builtinfnobject.c  builtinfnobject.h  errorobject.c  errorobject.h  fileobject.c  fileobject.h  floatobject.c  floatobject.h  functionobject.c  functionobject.h  longobject.c  longobject.h  noneobject.c  noneobject.h  strobject.c  strobject.h
